# flex-odbc

./: .gitignore  .vsconfig  BUILD.md  CONTRIBUTING.md  README.md  flex-odbc.sln
.continue/: .continuerc.json  config.template.yaml
.continue/rules/: 01-vision.md  02-arch.md  03-comm.md
config/: driver.properties
samples/cpp_sample/: CMakeLists.txt  README.md  driver.properties
samples/cpp_sample/src/: flex_odbc.proto  main.cpp
samples/csharp_sample/: .editorconfig
samples/csharp_sample/src/: Program.cs  Sidecar.csproj  flex_odbc.proto
samples/csharp_sample/test/: Sidecar.Tests.csproj
samples/java_sample/: checkstyle.xml  pom.xml
samples/java_sample/src/main/java/com/flexodbc/sidecar/proto/: ConnectRequest.java  ConnectRequestOrBuilder.java  ConnectResponse.java  ConnectResponseOrBuilder.java  DisconnectRequest.java  DisconnectRequestOrBuilder.java  DisconnectResponse.java  DisconnectResponseOrBuilder.java  Driver.java  DriverConnectRequest.java  DriverConnectRequestOrBuilder.java  DriverConnectResponse.java  DriverConnectResponseOrBuilder.java  ExecuteRequest.java  ExecuteRequestOrBuilder.java  ExecuteResponse.java  ExecuteResponseOrBuilder.java  FetchRequest.java  FetchRequestOrBuilder.java  FetchResponse.java  FetchResponseOrBuilder.java  Row.java  RowOrBuilder.java  RowSet.java  RowSetOrBuilder.java
schema/: driver.proto
scripts/: build_sdk.ps1  compile_proto.ps1  install-tools.py
sdk/: CMakeLists.txt  CMakeLists.txt.old  vcpkg-configuration.json  vcpkg.json
sdk/include/flex_sdk/: config_reader.hpp  ipc_channel.hpp  odbc_objects.hpp  pipe_ipc_channel.hpp  process_launcher.hpp
sdk/src/: CMakeLists.txt  config_reader.cpp  flex_odbc.def  main.cpp  odbc_api.cpp  odbc_objects.hpp  pipe_ipc_channel.cpp  process_launcher.cpp
sdk/src/schema/: driver.proto
sdk/test/: CMakeLists.txt  test_main.cpp
sdk/test/src/: main.cpp  test_main.cpp
test/: CMakeLists.txt
test/src/: main.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
